<resources>
    <string name="app_name">Shopping Drive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="delivery_man">Delivery man</string>
    <string name="radiobutton">RadioButton</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="merchant">Merchant</string>
    <string name="shopping_drive">Shopping Drive</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="street_address">Street address</string>
    <string name="city">City</string>
    <string name="country_code">Country Code</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="todo">TODO</string>
    <string name="image_description">img_descript</string>
    <string name="articles">Articles</string>
    <string name="checkout">Checkout</string>
    <string name="ordered">Ordered</string>
    <string name="textView_checkout_p2_info">We\'ve got your order. Your Items will be ready–delivered within 3-7 minutes</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="textView_checkout_info">Enter your email to confirm your order</string>
    <string name="confirm_oder">Confirm Oder</string>
    <string name="my_basket">My Basket</string>
    <string name="send_my_order">Send My Order</string>
    <string name="username">Username</string>
    <string name="change_your_password">Change your Password</string>
    <string name="cancel">Cancel</string>
    <string name="change_PWD_info">We will mail you a link after you provide a valid email and click the send button. Please click on that link to reset your password.</string>
    <string name="send_email">Send Email</string>
    <string name="image">Image : ......</string>

    <string-array name="roles">
        <item>Select role</item>
        <item>Client</item>
        <item>Merchant</item>
        <item>Delivery Man</item>
    </string-array>

    <string-array name="Login_Spinner_Item_Roles">
        <item>Select role</item>
        <item>Client</item>
        <item>Merchant</item>
        <item>Delivery Man</item>
    </string-array>


    <string name="title_home">Home</string>
    <string name="title_my_products">My products</string>
    <string name="title_commands">Commands</string>
    <string name="title_my_profile">My profile</string>
</resources>
