<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:text="@string/shopping_drive"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:fontFamily="cursive" />

    <EditText
        android:id="@+id/editText_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:text="jl@anexys.fr"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/editText_user_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="123456789"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/round_edge_button_color_orange"
        android:text="@string/login"
        android:layout_marginTop="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/button_pwd"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@color/color_transparent"
            android:text="@string/password"
            android:textColor="@color/color_dark"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView_straight_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@color/color_transparent"
            android:text="@string/register"
            android:textColor="@color/color_dark"
            android:textSize="10sp" />

    </LinearLayout>




</LinearLayout>