<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dark"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/registration"
                android:textColor="@color/color_white"
                android:textSize="36sp"
                app:fontFamily="cursive" />

            <EditText
                android:id="@+id/editText_firstName"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/firstname"
                android:textColorHint="@color/color_white"
                android:textColor="@color/color_white"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:textColorHint="@color/color_white"
                android:textColor="@color/color_white" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/color_white"
                android:textColor="@color/color_white"/>

            <EditText
                android:id="@+id/editText_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColorHint="@color/color_white"
                android:textColor="@color/color_white" />

            <EditText
                android:id="@+id/editText_user_regist_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="@color/color_white"
                android:textColor="@color/color_white"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editText_confirm_user_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/color_white"
                android:textColor="@color/color_white"
                android:inputType="textPassword" />

            <Spinner
                android:id="@+id/spinner_user_role"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/color_white"
                android:textColor="@color/color_white" />

            <EditText
                android:id="@+id/editText_companyName"
                android:layout_width="215dp"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="Company Name"
                android:textColorHint="@color/color_white"
                android:textColor="@color/color_white"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="100dp">

                <Button
                    android:id="@+id/button_backToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/round_edge_button_color_blue"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/button_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/round_edge_button_color_blue"
                    android:text="@string/next" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>