<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePWD"
    android:background="@color/color_background">

    <TextView
        android:id="@+id/textView_change_pwd_changePWD_title"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_your_password"
        android:textColor="@color/color_dark"
        android:textSize="36sp"
        app:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_change_pwd_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="54dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/color_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_change_PWD_info" />

    <Button
        android:id="@+id/button_change_pwd_rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="56dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="56dp"
        android:layout_marginStart="35dp"
        android:background="@drawable/round_edge_button"
        android:text="@string/send_email"
        android:textColor="@color/color_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_change_pwd_cancel" />

    <Button
        android:id="@+id/button_change_pwd_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="53dp"
        android:layout_marginStart="53dp"
        android:background="@drawable/round_edge_button"
        android:text="@string/cancel"
        android:textColor="@color/color_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_change_PWD_info"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/change_PWD_info"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_change_pwd_changePWD_title" />
</android.support.constraint.ConstraintLayout>