<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textView_checkout_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="153dp"
        android:layout_marginLeft="154dp"
        android:layout_marginRight="153dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkout"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_checkout_p2_info"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/textView_checkout_p2_info"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_checkout_p2_ordered" />

    <ImageView
        android:id="@+id/imageView_checkout_p2_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="142dp"
        android:layout_marginLeft="142dp"
        android:layout_marginRight="142dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_checkout_p2"
        app:srcCompat="@drawable/checked"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView_checkout_p2_ordered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginLeft="149dp"
        android:layout_marginRight="148dp"
        android:layout_marginStart="149dp"
        android:layout_marginTop="10dp"
        android:text="@string/ordered"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_checkout_p2_img" />

    <Button
        android:id="@+id/button_back_to_findMerchantList"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/black"
        android:padding="10dp"
        android:text="@string/continue_shopping"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_checkout_p2_info" />

</android.support.constraint.ConstraintLayout>