<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Checkout">

    <TextView
        android:id="@+id/textView_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:layout_marginLeft="154dp"
        android:layout_marginRight="112dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkout"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button_checkout_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_checkout_cancel"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/cancel_x_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_checkout_info"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/textView_checkout_info"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_checkout" />

    <EditText
        android:id="@+id/editText_checkout_getPWD"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_checkout_info" />

    <Button
        android:id="@+id/button_checkout_confirmOrder"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/black"
        android:padding="10dp"
        android:text="@string/confirm_oder"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_checkout_getPWD" />
</android.support.constraint.ConstraintLayout>